# Football-CVAnalysis

./: .gitignore  README.md  main.py  pyproject.toml  yolo_inference.py
models/: placeholder.txt
trackers/: tracker.py
tracking/: tracker.py
training/: football_training_yolo_v26.ipynb
utils/: bbox_utils.py  video_utils.py
