[project]
name = "football-analysis"
version = "0.1.0"
description = "A football analysis system demo"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ultralytics>=8.4.94",
    "supervision>=0.29.1",
    "opencv-python>=4.10",
    "numpy>=2.0",
    "trackers>=2.5.0.post0",
]
